Fixed issue with menus not showing all the entries.

--- a/app/assets/stylesheets/dfm_web/nav.css
+++ b/app/assets/stylesheets/dfm_web/nav.css
@@ -27,7 +27,6 @@ nav {
   position: absolute;
   top: 0;
   height: 75px;
-  white-space: nowrap;
   overflow: hidden;
 }
 
